--- a/agenda/pom.xml
+++ b/agenda/pom.xml
@@ -35,15 +35,16 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.6</version>
+                <configuration>
+                    <mainClass>com.odaviml.AgendaContatos</mainClass>
+                </configuration>                
                 <executions>
                     <execution>
                         <!-- Default configuration for running -->
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
-                        <configuration>
-                            <mainClass>com.odaviml.App</mainClass>
-                        </configuration>
                     </execution>
+                    
                 </executions>
             </plugin>
         </plugins>
